--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,3 @@
 RewriteEngine On
-RewriteRule ^([0-9a-z]+)$ index.php?commitid=$1 [QSA]
+RewriteRule ^([0-9]+)$ index.php?repository=$1 [QSA]
+RewriteRule ^([0-9]+)\/([0-9a-z]+) index.php?repository=$1&revision=$2 [QSA]
