--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-ErrorDocument 404 /index.php?404
+ErrorDocument 404 /index.php?error=404
 
 RewriteEngine On
 RewriteRule ^([0-9]+)$ index.php?repository=$1 [QSA]
