--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,7 @@
-ErrorDocument 404 /index.php?error=404
-
 RewriteEngine On
+
 RewriteRule ^([0-9]+)$ index.php?repository=$1 [QSA]
 RewriteRule ^([0-9]+)\/([0-9a-z]+) index.php?repository=$1&revision=$2 [QSA]
+
+RewriteCond %{request_filename} !-f
+RewriteRule ^(.+?)$ index.php?404
